Getting Started section complete

--- a/MeetingRoomScheduler/MainPage.xaml
+++ b/MeetingRoomScheduler/MainPage.xaml
@@ -8,6 +8,13 @@
     mc:Ignorable="d"
     x:Class="MeetingRoomScheduler.MainPage"
     Title="Meeting Room Scheduler">
-    <syncfusion:SfSchedule x:Name="schedule"
-                           ScheduleView="WeekView" />
+    <syncfusion:SfSchedule x:Name="schedule" ScheduleView="WeekView">
+        <syncfusion:SfSchedule.AppointmentMapping>
+            <syncfusion:ScheduleAppointmentMapping ColorMapping="Color"
+                                                   EndTimeMapping="To"
+                                                   StartTimeMapping="From"
+                                                   SubjectMapping="EventName"
+                                                   IsAllDayMapping="AllDay" />
+        </syncfusion:SfSchedule.AppointmentMapping>
+    </syncfusion:SfSchedule>
 </ContentPage>
