--- a/MeetingRoomScheduler/Pages/MainPage.xaml
+++ b/MeetingRoomScheduler/Pages/MainPage.xaml
@@ -8,7 +8,18 @@
     mc:Ignorable="d"
     x:Class="MeetingRoomScheduler.MainPage"
     Title="Meeting Room Scheduler">
-    <syncfusion:SfSchedule x:Name="schedule" ScheduleView="WeekView">
+    <syncfusion:SfSchedule x:Name="schedule"
+                           ScheduleView="MonthView"
+                           CellTappedCommand="{Binding ScheduleCellTapped}"
+                           CellDoubleTappedCommand="{Binding ScheduleCellDoubleTapped}"
+                           CellLongPressedCommand="{Binding ScheduleCellLongPressed}"
+                           VisibleDatesChangedCommand="{Binding ScheduleVisibleDatesChanged}"
+                           AllowAppointmentDrag="True">
+        <syncfusion:SfSchedule.MonthViewSettings>
+            <syncfusion:MonthViewSettings MonthNavigationDirection="Vertical">
+
+            </syncfusion:MonthViewSettings>
+        </syncfusion:SfSchedule.MonthViewSettings>
         <syncfusion:SfSchedule.AppointmentMapping>
             <syncfusion:ScheduleAppointmentMapping ColorMapping="Color"
                                                    EndTimeMapping="To"
